Bug 427546 - Krita not responding while saving reference images set
Summary: Krita not responding while saving reference images set
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools/Reference Images (other bugs)
Version First Reported In: 4.3.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-11 15:07 UTC by Tiar
Modified: 2022-09-19 13:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tiar 2020-10-11 15:07:39 UTC
SUMMARY
When I saved a reference images set, Krita was not responding for a few seconds. Depending on a size or number of reference images, it might take a long time, so I think it should be done in a background thread.

STEPS TO REPRODUCE
1. Open a file with reference images.
2. Select all images and go to Tool Options of the reference images tool.
3. Use "Export Reference Images Set".

OBSERVED RESULT
Krita doesn't respond to input; it looks like saving happens in the GUI thread.

EXPECTED RESULT
I can do other things while Krita is saving reference images.

SOFTWARE/OS VERSIONS
Krita (appimage)

 Version: 4.4.0-beta2
 Languages: en_US, en, en_US, en, en_US, en, pl_PL, pl, pl_PL, pl
 Hidpi: true

Qt

  Version (compiled): 5.12.9
  Version (loaded): 5.12.9
Comment 1 Ahab Greybeard 2020-10-13 14:31:36 UTC
I can confirm this for the Oct 12 4.4.1 alpha (git 7576587) appimage.
Comment 2 Halla Rempt 2022-09-19 13:07:50 UTC
Git commit 825940051bcedbaa6d47ea2da63ff4e872437bba by Halla Rempt.
Committed on 19/09/2022 at 13:07.
Pushed by rempt into branch 'master'.

Show the busy cursor when saving a reference image set

It's okay to block the ui, we just need to give the user feedback.

M  +5    -0    plugins/tools/defaulttool/referenceimagestool/ToolReferenceImages.cpp

https://invent.kde.org/graphics/krita/commit/825940051bcedbaa6d47ea2da63ff4e872437bba
Comment 3 Halla Rempt 2022-09-19 13:08:03 UTC
Git commit 02d89abba5056fb783eb4b4af647d11d7126fec8 by Halla Rempt.
Committed on 19/09/2022 at 13:07.
Pushed by rempt into branch 'krita/5.1'.

Show the busy cursor when saving a reference image set

It's okay to block the ui, we just need to give the user feedback.
(cherry picked from commit 825940051bcedbaa6d47ea2da63ff4e872437bba)

M  +5    -0    plugins/tools/defaulttool/referenceimagestool/ToolReferenceImages.cpp

https://invent.kde.org/graphics/krita/commit/02d89abba5056fb783eb4b4af647d11d7126fec8