Show the busy cursor when saving a reference image set

It's okay to block the ui, we just need to give the user feedback.

BUG:427546