plugins/tools/defaulttool/referenceimagestool/ToolReferenceImages.cpp
@@ -189,6 +189,8 @@ void ToolReferenceImages::loadReferenceImages()
 
 void ToolReferenceImages::saveReferenceImages()
 {
+    QApplication::setOverrideCursor(Qt::BusyCursor);
+
     auto layer = m_layer.toStrongRef();
     if (!layer || layer->shapeCount() == 0) return;
 
@@ -214,6 +216,7 @@ void ToolReferenceImages::saveReferenceImages()
 
     QFile file(filename);
     if (!file.open(QIODevice::WriteOnly)) {
+        QApplication::restoreOverrideCursor();
         QMessageBox::critical(qApp->activeWindow(), i18nc("@title:window", "Krita"), i18n("Could not open '%1' for saving.", filename));
         return;
     }
@@ -221,6 +224,8 @@ void ToolReferenceImages::saveReferenceImages()
     KisReferenceImageCollection collection(layer->referenceImages());
     bool ok = collection.save(&file);
     file.close();
+
+    QApplication::restoreOverrideCursor();
 
     if (!ok) {
         QMessageBox::critical(qApp->activeWindow(), i18nc("@title:window", "Krita"), i18n("Failed to save reference images."));
